<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_secondary"
    tools:context=".user.MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_primary"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_screen_horizontal"
        android:paddingTop="@dimen/space_screen_vertical"
        android:paddingEnd="@dimen/space_screen_horizontal"
        android:paddingBottom="@dimen/space_screen_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/btn_icon_size"
                android:layout_height="@dimen/btn_icon_size"
                android:background="@drawable/bg_rounded_gray"
                android:contentDescription="@string/action_back"
                android:padding="@dimen/space_8"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/text_secondary" />

            <TextView
                android:id="@+id/orders_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_weight="1"
                android:text="@string/orders_title"
                android:textAppearance="@style/TextAppearance.SoleStep.Subheading" />

            <TextView
                android:id="@+id/orders_count_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_orange_halo"
                android:gravity="center"
                android:minWidth="32dp"
                android:paddingStart="@dimen/space_6"
                android:paddingTop="@dimen/space_2"
                android:paddingEnd="@dimen/space_6"
                android:paddingBottom="@dimen/space_2"
                android:text="4"
                android:textAppearance="@style/TextAppearance.SoleStep.BodySmall"
                android:textColor="@color/brand_orange"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/orders_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tab_all"
                style="@style/TextAppearance.SoleStep.BodySmall"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginEnd="@dimen/space_2"
                android:layout_weight="1"
                android:background="@drawable/bg_order_tab_selector"
                android:gravity="center"
                android:tag="All"
                android:text="@string/orders_tab_all"
                android:textColor="@color/color_order_tab_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tab_pending"
                style="@style/TextAppearance.SoleStep.BodySmall"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="@dimen/space_2"
                android:layout_marginEnd="@dimen/space_2"
                android:layout_weight="1"
                android:background="@drawable/bg_order_tab_selector"
                android:gravity="center"
                android:tag="Pending"
                android:text="@string/orders_tab_pending"
                android:textColor="@color/color_order_tab_text" />

            <TextView
                android:id="@+id/tab_shipping"
                style="@style/TextAppearance.SoleStep.BodySmall"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="@dimen/space_2"
                android:layout_marginEnd="@dimen/space_2"
                android:layout_weight="1"
                android:background="@drawable/bg_order_tab_selector"
                android:gravity="center"
                android:tag="Shipping"
                android:text="@string/orders_tab_shipping"
                android:textColor="@color/color_order_tab_text" />

            <TextView
                android:id="@+id/tab_delivered"
                style="@style/TextAppearance.SoleStep.BodySmall"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="@dimen/space_2"
                android:layout_weight="1"
                android:background="@drawable/bg_order_tab_selector"
                android:gravity="center"
                android:tag="Delivered"
                android:text="@string/orders_tab_delivered"
                android:textColor="@color/color_order_tab_text" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/space_8"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <include
        layout="@layout/view_bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottom_nav_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
